--- a/login.html
+++ b/login.html
@@ -138,9 +138,9 @@
         .then((data) => {
           localStorage.setItem("t", data.accessToken);
 
-          window.open("http://127.0.0.1:5501/", "_self");
+          //window.open("http://127.0.0.1:5501/", "_self");
           // window.open(REQUEST.mainPage, "_self");
-          // window.open("https://walkers-alpha.vercel.app/", "_self");
+          window.open("https://walkers-admin-dev.vercel.app/", "_self");
         })
         .catch((error) => {
           console.log(error);
